Bug 1921426 - Restore tabs.onUpdated event for missing protocol handler pages. r=robwu,smaug, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D224214